# bevy_materialize

./: Cargo.toml  full_check.sh  readme.md
assets/materials/: animated.toml  example.material  example.material.json  example.material.ron  example.material.toml  sub-material.toml  super-material.toml
ci/: full_check.bat  full_check.sh
examples/: custom_material.rs  example.rs  example_json.rs  example_ron.rs
src/: animation.rs  color_space_fix.rs  de.rs  erased_material.rs  generic_material.rs  lib.rs  load.rs  prelude.rs  value.rs
src/load/: asset.rs  deserializer.rs  error.rs  inheritance.rs  mod.rs  processor.rs  simple.rs
