[package]
name = "bevy_materialize"
description = "Load, store, and apply type-erased materials in Bevy"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Noxmore/bevy_materialize"
license = "MIT OR Apache-2.0"
readme = "readme.md"
categories = ["game-development"]

[dependencies]
bevy = { version = "0.15", default-features = false, features = [
    "bevy_asset",
    "bevy_pbr",
    "png",
] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
thiserror = "2"
toml = { version = "0.8", optional = true }

[dev-dependencies.bevy]
version = "0.15"
features = [
    "bevy_winit",
    "file_watcher",
]

[[example]]
name = "example_json"
required-features = ["json"]

[features]
default = ["toml"]
json = ["dep:serde_json"]
toml = ["dep:toml"]