[package]
name = "bevy_materialize"
description = "Load, store, and apply type-erased materials in Bevy"
version = "0.3.1"
edition = "2021"
repository = "https://github.com/Noxmore/bevy_materialize"
license = "MIT OR Apache-2.0"
readme = "readme.md"
categories = ["game-development"]

[dependencies]
bevy = { version = "0.15", default-features = false, features = [
	"bevy_asset",
	"png",
] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
thiserror = "2"
toml = { version = "0.8", optional = true }

[dev-dependencies.bevy]
version = "0.15"
features = [
	"bevy_winit",
]

[[example]]
name = "example_json"
required-features = ["json"]

[[example]]
name = "custom_material"
required-features = ["toml", "bevy_pbr"]

[features]
default = ["bevy_pbr", "toml"]
bevy_pbr = ["bevy/bevy_pbr"]
json = ["dep:serde_json"]
toml = ["dep:toml"]