[package]
name = "bevy_materialize"
description = "Load, store, and apply type-erased materials in Bevy"
version = "0.5.0-rc.3"
edition = "2021"
repository = "https://github.com/Noxmore/bevy_materialize"
license = "MIT OR Apache-2.0"
readme = "readme.md"
categories = ["game-development"]

[dependencies]
bevy = { version = "0.16.0-rc.3", default-features = false, features = [
    "bevy_asset",
    "bevy_log",
] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
thiserror = "2"
toml = { version = "0.8", optional = true }

[dev-dependencies.bevy]
version = "0.16.0-rc.3"
features = ["bevy_winit", "png"]

[[example]]
name = "example_json"
required-features = ["json"]

[[example]]
name = "custom_material"
required-features = ["toml", "bevy_pbr"]

[features]
default = ["bevy_pbr", "toml"]
bevy_pbr = ["bevy/bevy_pbr", "bevy_image"]
bevy_image = ["bevy/bevy_image"]
json = ["dep:serde_json"]
toml = ["dep:toml"]
